moltservice: added in more stats for durations and cdc cursors
Release Note: None
