# moltservice/gen/http/moltservice/server/encode_decode.go
@@ -128,10 +128,14 @@ func marshalMoltserviceFetchStatsDetailedToFetchStatsDetailedResponseBody(v *mol
 		return nil
 	}
 	res := &FetchStatsDetailedResponseBody{
-		PercentComplete: v.PercentComplete,
-		NumErrors:       v.NumErrors,
-		NumTables:       v.NumTables,
-		NumRows:         v.NumRows,
+		PercentComplete:  v.PercentComplete,
+		NumErrors:        v.NumErrors,
+		NumTables:        v.NumTables,
+		NumRows:          v.NumRows,
+		NetDurationMs:    v.NetDurationMs,
+		ImportDurationMs: v.ImportDurationMs,
+		ExportDurationMs: v.ExportDurationMs,
+		CdcCursor:        v.CdcCursor,
 	}
 
 	return res
